# nano_finance

./: .gitignore  AI_APPLICATION_IMPLEMENTATION_PLAN.md  README.md  SFT_V2_OPTIMIZATION.md  pyproject.toml
finquery_rag/backend/: .env.example  .gitignore  FINANCIAL_TOOLS.md  RAG_CONFIG.md  conftest.py  pyproject.toml  pyrightconfig.json
finquery_rag/backend/docs/: INTERVIEW_DEMO.md  SFT1147_RAG_DEMO.md
finquery_rag/backend/eval/: CONTAMINATION_NOTICE.md  README.md  baseline_smoke_report.json  golden_smoke.jsonl  predictions_smoke.jsonl  real_eval_labeling_template.csv  real_eval_template.jsonl
finquery_rag/backend/scripts/: apply_clean.py  build_phase5_eval_index.py  check_eval_leakage.py  check_llm_adapter.py  check_phase5_dataset_overlap.py  check_sealed_eval_leakage.py  check_unicode_controls.py  ci_eval_gate.py  ci_preflight_smoke.py  clean_expand.txt  clean_factual.txt  clean_targeted.txt  freeze_phase5_rc.py  generate_phase4_artifacts.py  generate_phase5_acceptance_report.py  generate_phase5_artifacts.py  generate_phase5_eval_corpus.py  generate_phase5_questions_labels.py  generate_post_freeze_diff.py  real_eval_csv_to_jsonl.py  run_phase5_ablation.py  run_phase5_ablation_v2.py  run_phase5_baseline.py  run_phase5_baseline_v2.py  run_phase5_calibration.py  run_phase5_calibration_v2.py  run_phase5_sealed.py  run_phase5_sealed_blind.py  score_phase5_sealed.py  select_phase5_config.py  validate_phase5_release.py
finquery_rag/backend/src/: database.py  eval_cli.py  main.py
finquery_rag/backend/tests/: test_phase0.py  test_phase1.py  test_phase103_preflight.py  (+80 more)
(+465 files in other folders)
